Day9th-main/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 1jashshah/backend
        ports:
        - containerPort: 80
        resources:
            limits:
              cpu: 10m
            requests:
              cpu: 5m
