Day9th-main/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 1jashshah/front-end
        resources:
            limits:
              cpu: 10m
            requests:
              cpu: 5m
        ports:
        - containerPort: 80
